# pkg/handler/handler.go
@@ -27,6 +27,7 @@ func (h *Handler) InitRoutes() *gin.Engine {
 	{
 		auth.POST("/sign-up", h.signUp)
 		auth.POST("/sign-in", h.signIn)
+		auth.POST("/refresh", h.refresh)
 	}
 
 	api := router.Group("/api", h.userIdentity)
